// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigLoader validation invalid algorithm 1`] = `
ViolationsList {
  "violations": [
    {
      "message": "must be equal to one of the allowed values",
      "path": [
        "algorithm",
      ],
    },
  ],
}
`;

exports[`ConfigLoader validation invalid algorithm type 1`] = `
ViolationsList {
  "violations": [
    {
      "message": "must be string",
      "path": [
        "algorithm",
      ],
    },
  ],
}
`;

exports[`ConfigLoader validation invalid missing paths and external 1`] = `
ViolationsList {
  "violations": [
    {
      "message": "must contain at least 1 valid item(s)",
      "path": [
        "paths",
      ],
    },
  ],
}
`;
